--- a/src/Routes/HomeScreen/HomeScreen.module.css
+++ b/src/Routes/HomeScreen/HomeScreen.module.css
@@ -1,3 +1,6 @@
 .homescreen{
-    font-size:1em;
+    display:flex;
+    flex-direction:column;
+    justify-content:flex-start;
+    align-items:stretch;
 }
