--- a/src/Components/ModelExplorer/ModelElector/ModelElector.module.css
+++ b/src/Components/ModelExplorer/ModelElector/ModelElector.module.css
@@ -3,13 +3,15 @@
     max-width:100%;
     display:flex;
     justify-content:space-between;
-    align-items:flex-start;
+    align-items:center;
     margin-top:8em;
     z-index:5;
+    --transition:300ms;
 }
 .details{
+    position:relative;
     flex:1;
-    margin-top:6em;
+    transition:var(--transition);
 }
 .choices{
     display:flex;
@@ -24,13 +26,14 @@
     font-size:8em;
     text-transform:capitalize;
     color:white;
+    transition:var(--transition);
 }
 .description{
     font-family:arial;
     font-size:4em;
     line-height:1.5em;
-    margin-top:1em;
     color:rgba(255,255,255,0.5);
+    transition:var(--transition);
 }
 .description::first-letter{
     text-transform:uppercase;
