--- a/src/Components/ModelExplorer/ModelSwiper/ModelView/ModelView.module.css
+++ b/src/Components/ModelExplorer/ModelSwiper/ModelView/ModelView.module.css
@@ -2,7 +2,7 @@
     position:absolute;
     width:80em;
     height:inherit;
-    background-position:center;
+    background-position:top;
     background-size:cover;
     background-repeat:no-repeat;
     top:22em;
