--- a/src/WebViews/MainView/MainView.module.css
+++ b/src/WebViews/MainView/MainView.module.css
@@ -2,8 +2,10 @@
     display:flex;
     justify-content:center;
     align-items:center;
-    background-color:var(--backgroundColor);
 }
 .mainview>p{
     font-size:3em;
+}
+.container{
+    background-color:var(--backgroundColor);
 }
