--- a/src/WebViews/index.css
+++ b/src/WebViews/index.css
@@ -3,10 +3,10 @@
     --mainFont:arial;
     --majorFont:arial;
     --minorFont:arial;
-    --mainColor:black;
-    --majorColor:black;
-    --minorColor:black;
-    --backgroundColor:white;
+    --mainColor:#4599d7;
+    --majorColor:#d979c3;
+    --minorColor:#208758;
+    --backgroundColor:#1f1a2e;
 }
 *{
     margin:0;
