--- a/src/WebViews/index.css
+++ b/src/WebViews/index.css
@@ -1,8 +1,8 @@
 :root{
     font-size:1vw;
     --mainFont:arial;
-    --majorFont:arial;
-    --minorFont:arial;
+    --majorFont:pottaone;
+    --minorFont:robotoslab;
     --mainColor:#4599d7;
     --majorColor:#d979c3;
     --minorColor:#208758;
