--- a/src/Screens/AboutScreen/AboutScreen.module.css
+++ b/src/Screens/AboutScreen/AboutScreen.module.css
@@ -1,3 +1,62 @@
 .aboutscreen{
-    font-size:1em;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    align-items:stretch;
+}
+.row0{
+    max-width:100%;
+    flex:1;
+    display:flex;
+    flex-direction:column;
+    justify-content:flex-start;
+    align-items:center;
+}
+.row1{
+    display:flex;
+    justify-content:space-around;
+    align-items:center;
+    padding:5em 0;
+}
+.appicon{
+    width:30em;
+    margin-top:10em;
+}
+.title{
+    font-size:7em;
+    text-transform:capitalize;
+    color:white;
+}
+.version{
+    font-size:4em;
+    color:white;
+}
+.section{
+    width:fit-content;
+    display:flex;
+    flex-direction:column;
+    justify-content:flex-start;
+    align-items:center;
+    margin-top:10em;
+}
+.fields{
+    max-width:100%;
+}
+.field{
+    display:flex;
+    justify-content:flex-start;
+    align-items:center;
+    margin-top:5em;
+}
+.field>img{
+    width:5em;
+    margin-right:2em;
+}
+.value{
+    font-size:4em;
+    color:white;
+}
+.logo{
+    width:30em;
+    opacity:0.25;
 }
