--- a/www/Fonts/index.css
+++ b/www/Fonts/index.css
@@ -1,6 +1,11 @@
 
 
 @font-face {
+    font-family:"parisienne";
+    src:url("./Parisienne-Regular.ttf");
+}
+
+@font-face {
     font-family:"robotoslab";
     src:url("./PTSerif-Regular.ttf");
 }
