ImageViewer: fix image display on landscape screen orientation

--- a/src/Components/ImageViewer/ImageView/ImageView.module.css
+++ b/src/Components/ImageViewer/ImageView/ImageView.module.css
@@ -15,6 +15,7 @@
 @media(orientation:landscape){
     .imageview>img{
         height:100%;
+        aspect-ratio:10/1;
     }
 }
 @media(orientation:portrait){
