--- a/src/WebViews/index.css
+++ b/src/WebViews/index.css
@@ -2,7 +2,7 @@
     font-size:1vw;
     --mainFont:arial;
     --majorFont:pottaone;
-    --minorFont:robotoslab;
+    --minorFont:cutivemono;
     --mainColor:#4599d7;
     --majorColor:#d979c3;
     --minorColor:#208758;
