--- a/src/Assets/Fonts/index.css
+++ b/src/Assets/Fonts/index.css
@@ -1,13 +1,9 @@
 
 
-@font-face {
-    font-family:"parisienne";
-    src:url("./Parisienne-Regular.ttf");
-}
 
 @font-face {
-    font-family:"robotoslab";
-    src:url("./PTSerif-Regular.ttf");
+    font-family:"cutivemono";
+    src:url("./CutiveMono-Regular.ttf");
 }
 
 @font-face {
