--- a/src/Components/QuizView/QuestionView/QuestionView.module.css
+++ b/src/Components/QuizView/QuestionView/QuestionView.module.css
@@ -1,8 +1,8 @@
 .questionview{
-    font-family:var(--mainFont);
-    font-size:10em;
+    font-family:var(--minorFont);
+    font-size:7em;
     font-weight:400;
-    line-height:1.4em;
+    line-height:1.25em;
     color:var(--textColor);
     width:calc(100vw - 1em);
     height:100%;
