--- a/src/Screens/AboutScreen/AboutScreen.module.css
+++ b/src/Screens/AboutScreen/AboutScreen.module.css
@@ -1,26 +1,29 @@
 .aboutscreen{
+    max-width:100%;
     display:flex;
     flex-direction:column;
     justify-content:space-between;
-    align-items:stretch;
+    align-items:center;
+    --spacingVertical:20em;
 }
-.row0{
-    max-width:100%;
-    flex:1;
+.overview{
     display:flex;
     flex-direction:column;
     justify-content:flex-start;
     align-items:center;
+    padding-top:var(--spacingVertical);
 }
-.row1{
+.about{
+    width:fit-content;
     display:flex;
-    justify-content:space-around;
+    flex-direction:column;
+    justify-content:flex-start;
     align-items:center;
-    padding:5em 0;
+    padding-bottom:var(--spacingVertical);
 }
 .appicon{
-    width:30em;
-    margin-top:10em;
+    width:25em;
+    margin-bottom:5em;
 }
 .title{
     font-size:7em;
@@ -28,16 +31,9 @@
     color:white;
 }
 .version{
-    font-size:4em;
+    font-size:0.5em;
+    text-transform:lowercase;
     color:white;
-}
-.section{
-    width:fit-content;
-    display:flex;
-    flex-direction:column;
-    justify-content:flex-start;
-    align-items:center;
-    margin-top:10em;
 }
 .fields{
     max-width:100%;
