--- a/src/Components/ModelExplorer/ModelSwiper/ModelSwiper.module.css
+++ b/src/Components/ModelExplorer/ModelSwiper/ModelSwiper.module.css
@@ -1,5 +1,7 @@
 .modelswiper{
     max-width:100%;
     height:100em;
-    margin-top:10em;
+    overflow:visible;
+    margin-top:var(--marginTop);
+    --marginTop:10em;
 }
