--- a/src/Components/ModelExplorer/ModelElector/ModelElector.module.css
+++ b/src/Components/ModelExplorer/ModelElector/ModelElector.module.css
@@ -4,7 +4,7 @@
     display:flex;
     justify-content:space-between;
     align-items:center;
-    margin-top:8em;
+    /* margin-top:8em; */
     z-index:5;
     --transition:300ms;
 }
