--- a/src/Components/ModelExplorer/ModelSwiper/ModelView/ModelView.module.css
+++ b/src/Components/ModelExplorer/ModelSwiper/ModelView/ModelView.module.css
@@ -5,7 +5,7 @@
     background-position:top;
     background-size:cover;
     background-repeat:no-repeat;
-    top:22em;
+    top:var(--marginTop);
     left:0;right:0;margin:0 auto;
 }
 .photo{
@@ -18,7 +18,7 @@
     from{
         width:80em;
         height:inherit;
-        top:22em;
+        top:var(--marginTop);
     }
     to{
         width:100%;
