--- a/src/Components/QuizView/ChainView/ChainView.module.css
+++ b/src/Components/QuizView/ChainView/ChainView.module.css
@@ -11,16 +11,15 @@
     width:4em;
     height:4em;
     border-radius:50%;
-    border:0.1em solid var(--majorColor);
-    background-color:var(--mainColor);
-    /* background-color:var(--majorColor); */
+    border:0.5em solid var(--backgroundColor);
+    background-color:var(--textColor);
     z-index:2;
 }
 .branch{
     position:absolute;
     width:100%;
     height:0.1em;
-    background-color:var(--majorColor);
+    background-color:var(--textColor);
     top:0;bottom:0;margin:auto 0;
     z-index:1;
 }
