--- a/src/Components/QuizView/QuizView.module.css
+++ b/src/Components/QuizView/QuizView.module.css
@@ -1,25 +1,47 @@
 .quizview{
+    position:relative;
     max-width:100%;
     height:100%;
     display:flex;
     flex-direction:column;
-    justify-content:flex-start;
+    justify-content:space-between;
     align-items:stretch;
-    padding:0 5em;
     background:linear-gradient(to bottom right,var(--mainColor) 2.5%, var(--majorColor) 90%);
+    --spacingHorizontal:5em;
+    --marginVertical:10em;
+    --correctColor:var(--minorColor);
+    --wrongColor:#e03f3f;
 }
-.container{
+.question{
+    font-family:var(--mainFont);
+    font-size:7em;
+    letter-spacing:0.05em;
+    text-transform:lowercase;
+    color:var(--textColor);
     max-width:100%;
-    flex:1;
+    margin:0 calc(var(--spacingHorizontal) / 6);
+    margin-top:calc(var(--marginVertical) / 6);
+}
+.question::first-letter{
+    text-transform:uppercase;
+}
+.flatlist{
+    max-width:100%;
     display:flex;
-    flex-direction:column;
     justify-content:center;
     align-items:center;
+    overflow:visible !important;
+}
+.container{
+    flex:none;
+}
+.container>*{
+    margin:0 var(--spacingHorizontal) 
 }
 .footer{
     max-width:100%;
-    font-size:1em;
-    padding-bottom:20em;
+    margin:0 var(--spacingHorizontal);
+    margin-bottom:var(--marginVertical);
 }
 
 @keyframes rotate {
