--- a/src/WebViews/index.css
+++ b/src/WebViews/index.css
@@ -6,7 +6,7 @@
     --mainColor:#4599d7;
     --majorColor:#d979c3;
     --minorColor:#208758;
-    --textColor:white;
+    --textColor:#ffffff;
     --backgroundColor:#1f1a2e;
 }
 *{
