--- a/src/Components/QuizGame/AnswerPad/AnswerPad.module.css
+++ b/src/Components/QuizGame/AnswerPad/AnswerPad.module.css
@@ -8,12 +8,13 @@
     --borderWidth:0.6em;
 }
 .answerbtn{
+    font-size:1em;
+    color:var(--textColor);
     flex:1;
     display:flex;
     justify-content:center;
     align-items:center;
     padding:5em;
-    color:var(--textColor);
     background-color:transparent;
 }
 .answerbtn[clicked]{
